version 0.7.3+
	* Refactored implementation of options
	* Fix mapreduce for empty input

version 0.7.3 Tue Jan 4 2011 by luispedro
	* Parse ~/.jug/configrc
	* Fix bug with waiting times
	* Special case saving of numpy arrays
	* Add more expressive jugdir syntax
	* Save dict_store backend to disk

version 0.7.2 Wed Nov 3 2010 by luispedro
	* Add missing files to distribution

version 0.7.1 Mon Nov 2 2010 by luispedro
	* sleep-until subcommand
	* Fix for barrier() and mapreduce interaction
	* Documentation improvement

version 0.7 by luispedro
	* `barrier()`
	* better ``shell`` command
	* Rewrote method for loading jugfiles
	* Tasks have original function accessible as `f`

version 0.6.1 Mon Sep 13 2010 by luispedro
	* New check command
	* load_all() inside shell

version 0.5.5-git Wed May 5 2010 by luispedro
	* New cached status subcommand. Much faster.

version 0.5.3 Mon Apr 26 2010 by luispedro
	* New backend compression methods

version 0.5.2 Tue Mar 30 2010 by luispedro
	* New `shell` command
	* Compression in redis backend
	* Improvements in speed for 'invalidate' command

version 0.5 Sun Dec 13 2009 by luispedro
	* redis backend
	* dictionary dependencies
	* changed command-line interface (jug command jugfile ...)
