@@ -1,5 +1,6 @@
 version 0.7.3+
 	* Refactored implementation of options
+	* Fix unloading tasks that have not run
 	* Fix mapreduce for empty input
 
 version 0.7.3 Tue Jan 4 2011 by luispedro
